--- a/index.html
+++ b/index.html
@@ -22,5 +22,41 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="hero">
+            <h1>WELCOME TO MY PORTFOLIO</h1>
+            <p>I am a passionate web developer, creating modern websites</p>
+            <a href="services.html" class="cta-button">view my work</a>
+            </section>
+
+            <section class="projects">
+                <h2>Featured project</h2>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="IMAGES/img1.jpg" alt="Project 1">
+                        <h3>project-1</h3>
+                        <p>a modern e-commerce platform with responsive design.</p>
+                    </div>
+                    <div class="project-card">
+                        <img src="IMAGES/img2.jpg" alt="Project 2">
+                        <h3>project-2</h3>
+                        <p>a portfolio website showcasing my skills and projects.</p>
+
+                    </div>
+                </div>
+            </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 myPortfolio.all rights reserved</p>
+    </footer>
+    <script>
+        //theme toggle functionality
+        document.getElementById('theme-switch').addEventListener('change', () => {
+            document.body.classList.toggle('dark-theme');
+            
+        });
+            
+    </script>
 </body>
 </html>
